daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N20_missing_required_log/kem_block.cbor.hex
a4005840dc6d858cd2a93b6f3b3289dcfec1f449ea755a0ab06b05a8a1dbb8fa62f5f7288aef79c11564cf3e9e111155cf2546652edce1617aad875bc2b36aacda4a3e9f01584033d1b5489dd06eea5cd8d62f79b75a179b1964c2a2b1a39d1d613477fb32724a66c55987033363f55d270e2c791e49d757b53db81f7bbe5c36b9d9c77f002d17025840667827ae72dd83ae744ff9a81dd70c626b996e36fa4ff52714838da20abff034bf04a3d06095a4dc4f42899ae9184e6172a569b77174103b9d1d5041cef018aa03584008871fcf5026a576a513acd9dfc6e65151aebe22d8ed1922d57ba7c9f26e19da9f99b62bc21647a2375b67324a5a5454bf4b0a46af7e5ec7f61386f9bfcd8497
